AIX build broken after latest whitebox.cpp changes

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P1
    • 11
    • Affects Version/s: 11
    • Component/s: hotspot
    • None
    • b03
    • ppc
    • aix

      The AIX build is broken, error is /nb/rs6000_64/nightly/jdk-hs/src/hotspot/share/utilities/elfFile.hpp", line 33.10: 1540-0836 (S) The #include file <elf.h> is not found. (whitebox.o compilation failed).

      The recent change 8193373: Cleanup ElfFile and family
      adjusted some inclusions.

            Assignee:
            Matthias Baesken
            Reporter:
            Matthias Baesken
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: