8198275: AIX build broken after latest whitebox.cpp changes

Reviewed-by: mdoerr