src/hotspot/share/utilities/elfFile.hpp
@@ -25,7 +25,7 @@
 #ifndef SHARE_VM_UTILITIES_ELF_FILE_HPP
 #define SHARE_VM_UTILITIES_ELF_FILE_HPP
 
-#if !defined(_WINDOWS) && !defined(__APPLE__)
+#if !defined(_WINDOWS) && !defined(__APPLE__) && !defined(_AIX)
 
 #if defined(__OpenBSD__)
 #include <sys/exec_elf.h>
